Rename LinkedList to VLinkedList